# erpc_testing_application

./: .gitmodules  CMakeLists.txt  CMakePresets.json  client.cpp  interface.erpc  readme.md  server.cpp
